# SlicerDeveloperToolsForExtensions

./: CMakeLists.txt  README.md
DeveloperToolsForExtensions/: CMakeLists.txt  DeveloperToolsForExtensions.py
DeveloperToolsForExtensions/Testing/Python/: CMakeLists.txt  myDummyExtension.s4ext
ExtensionStats/: CMakeLists.txt  ExtensionStats.py
ExtensionStats/Resources/: ExtensionsDownloadStats-20210521.csv  ExtensionsDownloadStats-20211027.csv
ExtensionStats/Resources/Icons/: README.md
